Fix text overflow in FF

--- a/sonar-server/src/main/webapp/stylesheets/navigator/filters.less
+++ b/sonar-server/src/main/webapp/stylesheets/navigator/filters.less
@@ -165,7 +165,6 @@
     cursor: pointer;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
 
     &:hover,
     &.current {
